修改数据库声明，使用schema 区分各个module之间的领域设计差异

--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -50,7 +50,7 @@ z.rook.primary.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL
 z.rook.primary.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 z.rook.primary.jpa.properties.hibernate.hbm2ddl.auto=update
 z.rook.primary.jpa.properties.hibernate.format_sql=true
-z.rook.primary.jpa.properties.hibernate.default_schema="z-chess"
+z.rook.primary.jpa.properties.hibernate.default_schema="z_chess_default"
 z.rook.primary.datasource.initialization-mode=always
 z.rook.primary.datasource.platform=postgresql
 z.rook.primary.datasource.driver-class-name=org.postgresql.Driver
