--- a/scripts/amd64/Dockerfile
+++ b/scripts/amd64/Dockerfile
@@ -1,10 +1,17 @@
 FROM bellsoft/liberica-openjdk-alpine
-ARG LANG=zh_CN.UTF-8
-RUN apk add --update --no-cache sqlite
+ENV LANG=zh_CN.UTF-8
+ENV TZ=Asia/Shanghai
+RUN set -eux \
+&& sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories \
+&& apk add alpine-conf \
+&& setup-timezone -z ${TZ} \
+&& apk add --update --no-cache sqlite
+
 ARG JAR_FILE=Z-Arena/target/*.jar
-ARG SQLITE_NATIVE_FILE=Z-Arena/target/libsqlitejdbc.so
+ARG SQLITE_NATIVE_FILE=SQLite-ABI-Linux-Alpine-amd64/libsqlitejdbc.so
 COPY ${JAR_FILE} app.jar
 COPY ${SQLITE_NATIVE_FILE} /usr/lib/libsqlitejdbc.so
+
 EXPOSE 8080
 EXPOSE 8000
 EXPOSE 1883
