update docker config

--- a/scripts/aarch64/Dockerfile
+++ b/scripts/aarch64/Dockerfile
@@ -1,5 +1,6 @@
 FROM bellsoft/liberica-openjdk-alpine-musl
 ENV LANG=zh_CN.UTF-8
+ENV LANGUAGE=zh_CN.UTF-8
 ENV TZ=Asia/Shanghai
 RUN set -eux \
 && sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories \
@@ -8,7 +9,7 @@ RUN set -eux \
 && apk add --update --no-cache sqlite
 
 ARG JAR_FILE=Z-Arena/target/*.jar
-ARG SQLITE_NATIVE_FILE=SQLite-ABI-Alpine-arm64/libsqlitejdbc.so
+ARG SQLITE_NATIVE_FILE=libsqlitejdbc.so
 COPY ${JAR_FILE} app.jar
 COPY ${SQLITE_NATIVE_FILE} /usr/lib/libsqlitejdbc.so
 
