--- a/scripts/aarch64/Docker-Compose.yaml
+++ b/scripts/aarch64/Docker-Compose.yaml
@@ -10,17 +10,17 @@ services:
       - "1883:1883"
     networks:
       endpoint:
-        ipv4_address: 192.168.10.110
+        ipv4_address: 172.30.10.110
       gate:
-        ipv4_address: 192.168.11.110
+        ipv4_address: 172.30.11.110
     extra_hosts:
-      - "raft00:192.168.10.110"
-      - "raft01:192.168.10.111"
-      - "raft02:192.168.10.112"
-      - "gate00:192.168.11.110"
+      - "raft00:172.30.10.110"
+      - "raft01:172.30.10.111"
+      - "raft02:172.30.10.112"
+      - "gate00:172.30.11.110"
     volumes:
       - "~/Z-Chess/raft00:/root/Z-Chess"
-    entrypoint: java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:8000 -jar /app.jar --spring.profiles.active=local
+    entrypoint: java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:8000 -jar /app.jar --spring.profiles.active=online
   raft11:
     image: img.z-chess.arena.aarch64
     container_name: raft01
@@ -30,15 +30,15 @@ services:
       - "8100:8000"
     networks:
       endpoint:
-        ipv4_address: 192.168.10.111
+        ipv4_address: 172.30.10.111
     extra_hosts:
-      - "raft00:192.168.10.110"
-      - "raft01:192.168.10.111"
-      - "raft02:192.168.10.112"
-      - "gate00:192.168.11.110"
+      - "raft00:172.30.10.110"
+      - "raft01:172.30.10.111"
+      - "raft02:172.30.10.112"
+      - "gate00:172.30.11.110"
     volumes:
       - "~/Z-Chess/raft01:/root/Z-Chess"
-    entrypoint: java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:8000 -jar /app.jar --spring.profiles.active=local
+    entrypoint: java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:8000 -jar /app.jar --spring.profiles.active=online
   raft12:
     image: img.z-chess.arena.aarch64
     container_name: raft02
@@ -48,25 +48,25 @@ services:
       - "8200:8000"
     networks:
       endpoint:
-        ipv4_address: 192.168.10.112
+        ipv4_address: 172.30.10.112
     extra_hosts:
-      - "raft00:192.168.10.110"
-      - "raft01:192.168.10.111"
-      - "raft02:192.168.10.112"
-      - "gate00:192.168.11.110"
+      - "raft00:172.30.10.110"
+      - "raft01:172.30.10.111"
+      - "raft02:172.30.10.112"
+      - "gate00:172.30.11.110"
     volumes:
       - "~/Z-Chess/raft02:/root/Z-Chess"
-    entrypoint: java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:8000 -jar /app.jar --spring.profiles.active=local
+    entrypoint: java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:8000 -jar /app.jar --spring.profiles.active=online
 networks:
   endpoint:
     driver: bridge
     ipam:
       config:
-        - subnet: 192.168.10.0/24
-          gateway: 192.168.10.1
+        - subnet: 172.30.10.0/24
+          gateway: 172.30.10.1
   gate:
     driver: bridge
     ipam:
       config:
-        - subnet: 192.168.11.0/24
-          gateway: 192.168.11.1
+        - subnet: 172.30.11.0/24
+          gateway: 172.30.11.1
