--- a/scripts/amd64/Dockerfile
+++ b/scripts/amd64/Dockerfile
@@ -23,11 +23,11 @@ FROM bellsoft/liberica-openjdk-alpine
 ENV LANG=zh_CN.UTF-8
 ENV LANGUAGE=zh_CN.UTF-8
 ENV TZ=Asia/Shanghai
-RUN set -eux \
-&& sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories \
-&& apk add alpine-conf \
-&& setup-timezone -z ${TZ} \
-&& apk add --update --no-cache sqlite
+RUN set -eux &&\
+    sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories &&\
+    apk add alpine-conf &&\
+    setup-timezone -z ${TZ} &&\
+    apk add --update --no-cache sqlite
 
 ARG JAR_FILE=Z-Arena/target/*.jar
 ARG SQLITE_NATIVE_FILE=libsqlitejdbc.so
