--- a/scripts/amd64/Dockerfile
+++ b/scripts/amd64/Dockerfile
@@ -19,7 +19,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
-FROM isahl/openjdk17
+FROM isahl/openjdk17:amd64
 ENV TZ=Asia/Shanghai
 RUN set -eux &&\
     sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories &&\
