docker file update & mixHandler's Single custom

--- a/scripts/amd64/Docker-Compose.yaml
+++ b/scripts/amd64/Docker-Compose.yaml
@@ -1,4 +1,4 @@
-# MIT License
+ # MIT License
 #
 # Copyright (c) 2016~2021. Z-Chess
 #
@@ -21,6 +21,22 @@
 
 version: '3.9'
 services:
+  db-pg:
+    image: isahl/postgres
+    container_name: db-pg
+    hostname: db-pg
+    domainname: isahl.com
+    ports:
+      - "5432:5432"
+    networks:
+      endpoint:
+        ipv4_address: 172.30.10.254
+    volumes:
+      - "~/Services/db/postgresql:/var/lib/postgresql/data"
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgress
+      - POSTGRES_DB=postgres
   raft10:
     image: img.z-chess.arena.amd64
     container_name: raft00
