--- a/Z-Board/pom.xml
+++ b/Z-Board/pom.xml
@@ -43,6 +43,7 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <encoding>${java.encoding}</encoding>
+                    <fork>true</fork>
                     <compilerArgs>
                         <arg>--add-exports</arg>
                         <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
