--- a/Z-Pawn/pom.xml
+++ b/Z-Pawn/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>storage.z-rook</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
