update board ,fix bug

--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -43,7 +43,7 @@ z.chess.raft.config.peers[2]=raft02:5228
 z.chess.raft.config.gates[-4611686018427387904]=raft00/gate00:5300
 z.chess.raft.config.gates[-4575657221408423936]=raft10/gate10:5300
 z.chess.raft.config.gates[-4287426845256712192]=raft20/gate20:5300
-#node 集群全员
+#node
 z.chess.raft.config.nodes[0]=raft00
 z.chess.raft.config.nodes[1]=raft01
 z.chess.raft.config.nodes[2]=raft02
