--- a/pom.xml
+++ b/pom.xml
@@ -239,6 +239,10 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-access</artifactId>
+        </dependency>
         <!--Test-->
         <dependency>
             <groupId>org.mockito</groupId>
@@ -277,6 +281,11 @@
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-core</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-access</artifactId>
                 <version>${logback.version}</version>
             </dependency>
             <!--IO-->
