--- a/Z-Arena/src/main/resources/application.properties
+++ b/Z-Arena/src/main/resources/application.properties
@@ -31,6 +31,7 @@ spring.main.allow-bean-definition-overriding=true
 spring.aop.proxy-target-class=false
 spring.output.ansi.enabled=ALWAYS
 spring.jpa.show-sql=false
+#spring.main.allow-circular-references = true
 #z.chess.provider.io.consumer.key_store_path=cert/server.jks
 z.chess.provider.io.consumer.trust_key_store_path=
 #z.chess.provider.io.consumer.key_password=storepass
