--- a/Z-Knight/src/main/resources/raft.properties
+++ b/Z-Knight/src/main/resources/raft.properties
@@ -27,9 +27,9 @@ z.chess.raft.config.uid.cluster_id=0
 # uid.type provider:2 cluster:3 internal:1 consumer:0
 z.chess.raft.config.uid.type=3
 z.chess.raft.config.elect_in_second=3S
-# ClientSubmitInSecond = 2* ElectInSecond
+# client_submit_in_second = 2* elect_in_second
 z.chess.raft.config.client_submit_in_second=6S
-# HeartbeatInSecond = 3 * ElectInSecond
+# heartbeat_in_second = 3 * elect_in_second
 z.chess.raft.config.heartbeat_in_second=9S
 #snapshot
 z.chess.raft.config.snapshot_in_second=60S
@@ -44,13 +44,11 @@ z.chess.raft.config.gates[-4611686018427387904]=raft00/gate00:5300
 z.chess.raft.config.gates[-4575657221408423936]=raft10/gate10:5300
 z.chess.raft.config.gates[-4287426845256712192]=raft20/gate20:5300
 #node
-z.chess.raft.config.nodes[0]=raft00
-z.chess.raft.config.nodes[1]=raft01
-z.chess.raft.config.nodes[2]=raft02
-z.chess.raft.config.nodes[3]=raft03
-z.chess.raft.config.nodes[4]=raft04
-z.chess.raft.config.nodes[5]=raft05
-z.chess.raft.config.nodes[6]=raft06
-z.chess.raft.config.nodes[7]=raft07
-#learner
-z.chess.raft.config.be_learner=true
+z.chess.raft.config.nodes[0]=raft00:5228
+z.chess.raft.config.nodes[1]=raft01:5228
+z.chess.raft.config.nodes[2]=raft02:5228
+z.chess.raft.config.nodes[3]=raft03:5228
+z.chess.raft.config.nodes[4]=raft04:5228
+z.chess.raft.config.nodes[5]=raft05:5228
+z.chess.raft.config.nodes[6]=raft06:5228
+z.chess.raft.config.nodes[7]=raft07:5228
