--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -29,7 +29,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialec
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.default_schema="z-chess.rook"
+spring.jpa.properties.hibernate.default_schema="z_chess_rook"
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
