--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -23,7 +23,7 @@
 
 # Primary Remote PostgreSQL Database
 z.rook.primary.jpa.database=POSTGRESQL
-z.rook.primary.jpa.show-sql=true
+z.rook.primary.jpa.show-sql=false
 z.rook.primary.jpa.generate-ddl=true
 z.rook.primary.jpa.open-in-view=true
 z.rook.primary.jpa.hibernate.ddl-auto=update
