--- a/Z-Referee/src/main/resources/application.yml
+++ b/Z-Referee/src/main/resources/application.yml
@@ -7,7 +7,7 @@ erupt:
   # 是否开启redis方式存储session，默认false，开启后需在配置文件中添加redis配置（同 spring boot）
   redisSession: false
   # 附件上传存储路径, 默认路径为：/opt/erupt-attachment
-  uploadPath: /erupt/attachment
+  uploadPath: /attachment
   # 是否保留上传文件原始名称
   keepUploadFileName: false
   # 登录session时长（redisSession为true时有效）
@@ -18,12 +18,12 @@ erupt:
 magic-api:
   web: /magic/web
   # 接口配置文件存放路径
-  resource.location: /erupt/magic-script
-  show-url: false
+  resource.location: /magic-script
+  show-url: true
 
 spring:
   datasource:
-    url: jdbc:postgresql://db-pg.isahl.com:5432/erupt-example
+    url: jdbc:postgresql://db-pg.isahl.com:5432/isahl.z-chess
     username: isahl.z-chess.pgsql
     password: 2da790253022bd05cddda6d06bdc1e60
   jpa:
@@ -32,6 +32,16 @@ spring:
     open-in-view: true
     database-platform: org.hibernate.dialect.PostgreSQL95Dialect
     database: POSTGRESQL
+#    properties:
+#      hibernate:
+#        default_schema: "z_chess_referee"
+#        format_sql: true
+#        enable_lazy_load_no_trans: true
+#        hdm2ddl:
+#          auto: true
+#        jdbc:
+#          lob:
+#            non_contextual_creation: true
   profiles:
     active: dev
   mail:
