--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,57 @@
         <url>git@github.com:William-d-zk/Z-Chess.git</url>
         <tag>R1.0.3</tag>
     </scm>
+    <properties>
+        <!--RT-->
+        <java.version>17</java.version>
+        <java.encoding>UTF-8</java.encoding>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <project.build.sourceEncoding>${java.encoding}</project.build.sourceEncoding>
+        <!--LOG-->
+        <slf4j.version>1.7.36</slf4j.version>
+        <logback.version>1.2.11</logback.version>
+        <!--SPRING-BOOT-->
+        <spring-boot.version>2.7.1</spring-boot.version>
+        <!--Commons-IO-->
+        <commons-io.version>2.11.0</commons-io.version>
+        <commons-codec.version>1.15</commons-codec.version>
+        <commons-compress.version>1.21</commons-compress.version>
+        <commons-collections4.version>4.4</commons-collections4.version>
+        <!--DB-->
+        <sqlite.driver.version>3.36.0.3</sqlite.driver.version>
+        <sqllite.hibernate.dialect.version>0.1.2</sqllite.hibernate.dialect.version>
+        <postgresql.driver.version>42.4.0</postgresql.driver.version>
+        <hibernate-types-52.version>2.16.3</hibernate-types-52.version>
+
+        <!--PIPELINE-->
+        <disruptor.version>3.4.4</disruptor.version>
+        <!--TOOLS-->
+        <httpcore-nio.version>4.4.15</httpcore-nio.version>
+        <!--TEST TOOLS VERSION-->
+        <junit.jupiter.version>5.8.2</junit.jupiter.version>
+        <junit.platform.verssion>1.8.2</junit.platform.verssion>
+        <mockito.version>4.6.1</mockito.version>
+        <!--CACHE-->
+        <ehcache.version>3.10.0</ehcache.version>
+        <jcache.version>1.1.1</jcache.version>
+        <!--JSON-->
+        <jackson.version>2.13.3</jackson.version>
+        <json-schema-validator.version>1.0.71</json-schema-validator.version>
+        <!--LOW_CODE_ERUPT-->
+        <erupt.version>1.10.10</erupt.version>
+        <!--PLUGINS-->
+        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+        <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
+        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+        <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
+        <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
+        <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
+        <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
+        <maven-javadoc-plugin.version>3.4.0</maven-javadoc-plugin.version>
+        <hibernate-enhance-maven-plugin.version>6.1.1.Final</hibernate-enhance-maven-plugin.version>
+        <maven.compiler.debug>true</maven.compiler.debug>
+    </properties>
     <profiles>
         <profile>
             <id>run</id>
@@ -140,6 +191,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
+                        <version>${maven-gpg-plugin.version}</version>
                     </plugin>
                     <plugin>
                         <groupId>org.sonatype.plugins</groupId>
@@ -174,55 +226,7 @@
         <module>Z-Audience</module>
         <module>Z-Arena</module>
     </modules>
-    <properties>
-        <!--RT-->
-        <java.version>17</java.version>
-        <java.encoding>UTF-8</java.encoding>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-        <project.build.sourceEncoding>${java.encoding}</project.build.sourceEncoding>
-        <!--LOG-->
-        <slf4j.version>1.7.36</slf4j.version>
-        <logback.version>1.2.11</logback.version>
-        <!--SPRING-BOOT-->
-        <spring-boot.version>2.7.1</spring-boot.version>
-        <!--Commons-IO-->
-        <commons-io.version>2.11.0</commons-io.version>
-        <commons-codec.version>1.15</commons-codec.version>
-        <!--DB-->
-        <sqlite.driver.version>3.36.0.3</sqlite.driver.version>
-        <sqllite.hibernate.dialect.version>0.1.2</sqllite.hibernate.dialect.version>
-        <postgresql.driver.version>42.4.0</postgresql.driver.version>
-        <hibernate-types-52.version>2.16.3</hibernate-types-52.version>
 
-        <!--PIPELINE-->
-        <disruptor.version>3.4.4</disruptor.version>
-        <!--TOOLS-->
-        <httpcore-nio.version>4.4.15</httpcore-nio.version>
-        <!--TEST TOOLS VERSION-->
-        <junit.jupiter.version>5.8.2</junit.jupiter.version>
-        <junit.platform.verssion>1.8.2</junit.platform.verssion>
-        <mockito.version>4.6.1</mockito.version>
-        <!--CACHE-->
-        <ehcache.version>3.10.0</ehcache.version>
-        <jcache.version>1.1.1</jcache.version>
-        <!--JSON-->
-        <jackson.version>2.13.3</jackson.version>
-        <json-schema-validator.version>1.0.71</json-schema-validator.version>
-        <!--LOW_CODE_ERUPT-->
-        <erupt.version>1.10.10</erupt.version>
-        <!--PLUGINS-->
-        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
-        <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
-        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-        <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
-        <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
-        <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
-        <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
-        <maven-javadoc-plugin.version>3.4.0</maven-javadoc-plugin.version>
-        <hibernate-enhance-maven-plugin.version>6.1.1.Final</hibernate-enhance-maven-plugin.version>
-        <maven.compiler.debug>true</maven.compiler.debug>
-    </properties>
     <dependencies>
         <!--Log-->
         <dependency>
@@ -297,6 +301,38 @@
                 <artifactId>commons-codec</artifactId>
                 <version>${commons-codec.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-compress</artifactId>
+                <version>${commons-compress.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${commons-collections4.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-text</artifactId>
+                <version>1.9</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-collections</groupId>
+                        <artifactId>commons-collections</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>commons-beanutils</groupId>
+                <artifactId>commons-beanutils</artifactId>
+                <version>1.9.4</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-collections</groupId>
+                        <artifactId>commons-collections</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
             <!--SpringBoot-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -352,6 +388,28 @@
                 <groupId>xyz.erupt</groupId>
                 <artifactId>erupt-upms</artifactId>
                 <version>${erupt.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.pdfbox</groupId>
+                        <artifactId>pdfbox</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.apache.santuario</groupId>
+                        <artifactId>xmlsec</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.apache.xmlgraphics</groupId>
+                        <artifactId>batik-svgbrowser</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.apache.xmlgraphics</groupId>
+                        <artifactId>xmlgraphics-commons</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.bouncycastle</groupId>
+                        <artifactId>bcprov-jdk15on</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency><!--接口数据安全-->
                 <groupId>xyz.erupt</groupId>
@@ -362,6 +420,32 @@
                 <groupId>xyz.erupt</groupId>
                 <artifactId>erupt-web</artifactId>
                 <version>${erupt.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-tomcat</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <!--magic-api-->
+            <dependency>
+                <groupId>xyz.erupt</groupId>
+                <artifactId>erupt-magic-api</artifactId>
+                <version>${erupt.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.commons</groupId>
+                        <artifactId>commons-text</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.apache.commons</groupId>
+                        <artifactId>commons-beanutils</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>commons-collections</groupId>
+                        <artifactId>commons-collections</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <!--Postgresql DB-->
             <dependency>
@@ -484,6 +568,38 @@
                 <groupId>com.networknt</groupId>
                 <artifactId>json-schema-validator</artifactId>
                 <version>${json-schema-validator.version}</version>
+            </dependency>
+            <!--apache SCA-->
+            <dependency>
+                <groupId>org.apache.pdfbox</groupId>
+                <artifactId>pdfbox</artifactId>
+                <version>2.0.26</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.santuario</groupId>
+                <artifactId>xmlsec</artifactId>
+                <version>3.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.xmlgraphics</groupId>
+                <artifactId>batik-svgbrowser</artifactId>
+                <version>1.14</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.xmlgraphics</groupId>
+                <artifactId>xmlgraphics-commons</artifactId>
+                <version>2.7</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcprov-jdk15on</artifactId>
+                <version>1.70</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
