multi datasource 配置方式变更。 提高易用性。

--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -20,43 +20,60 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
+spring.datasource.platform=postgresql
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://db-pg.isahl.com:5432/isahl.z-chess
+spring.datasource.username=isahl.z-chess.pgsql
+spring.datesource.password=2da790253022bd05cddda6d06bdc1e60
+spring.sql.init.mode=always
+#spring.sql.init.schema-locations.0=classpath:schema.sql
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=true
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.default_schema="z_chess_default"
+# dss[0]
+z.rook.dss[0].jpa.database=POSTGRESQL
+z.rook.dss[0].jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+z.rook.dss[0].jpa.show-sql=false
+z.rook.dss[0].jpa.generate-ddl=true
+z.rook.dss[0].jpa.open-in-view=true
+z.rook.dss[0].jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+z.rook.dss[0].jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+z.rook.dss[0].jpa.properties.hibernate.hbm2ddl.auto=update
+z.rook.dss[0].jpa.properties.hibernate.enable_lazy_load_no_trans=true
+z.rook.dss[0].jpa.properties.hibernate.format_sql=true
+z.rook.dss[0].jpa.properties.hibernate.default_schema="z_chess_default"
+z.rook.dss[0].datasource.name=0
+z.rook.dss[0].datasource.driver-class-name=org.postgresql.Driver
+z.rook.dss[0].datasource.url=jdbc:postgresql://db-pg.isahl.com:5432/isahl.z-chess
+z.rook.dss[0].datasource.username=isahl.z-chess.pgsql
+z.rook.dss[0].datasource.password=2da790253022bd05cddda6d06bdc1e60
+z.rook.dss[0].sql-init.mode=always
+z.rook.dss[0].sql-init.schema-locations.0=classpath:0/schema.sql
+z.rook.dss[0].sql-init.data-locations.0=classpath:0/data.sql
+# dss[1]
+z.rook.dss[1].jpa.database-platform=org.sqlite.hibernate.dialect.SQLiteDialect
+z.rook.dss[1].jpa.database=DEFAULT
+z.rook.dss[1].jpa.show-sql=false
+z.rook.dss[1].jpa.generate-ddl=true
+z.rook.dss[1].jpa.open-in-view=true
+z.rook.dss[1].jpa.properties.hibernate.dialect=org.sqlite.hibernate.dialect.SQLiteDialect
+z.rook.dss[1].jpa.properties.hibernate.hbm2ddl.auto=update
+z.rook.dss[1].jpa.properties.hibernate.format_sql=true
+z.rook.dss[1].datasource.name=1
+z.rook.dss[1].datasource.driver-class-name=org.sqlite.JDBC
+z.rook.dss[1].datasource.url=jdbc:sqlite:${user.home}/Z-Chess/z-chess.ds
+z.rook.dss[1].datasource.username=
+z.rook.dss[1].datasource.password=
+z.rook.dss[1].sql-init.mode=always
+#z.rook.dss[1].sql-init.schema-locations.0=classpath:1/schema.sql
+#z.rook.dss[1].sql-init.data-locations.0=classpath:1/data.sql
 
-# Primary Remote PostgreSQL Database
-z.rook.primary.jpa.database=POSTGRESQL
-z.rook.primary.jpa.show-sql=false
-z.rook.primary.jpa.generate-ddl=true
-z.rook.primary.jpa.open-in-view=true
-z.rook.primary.jpa.hibernate.ddl-auto=update
-z.rook.primary.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-z.rook.primary.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-z.rook.primary.jpa.properties.hibernate.hbm2ddl.auto=update
-z.rook.primary.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-z.rook.primary.jpa.properties.hibernate.format_sql=true
-z.rook.primary.jpa.properties.hibernate.default_schema="z_chess_default"
-z.rook.primary.datasource.initialization-mode=always
-z.rook.primary.datasource.platform=postgresql
-z.rook.primary.datasource.driver-class-name=org.postgresql.Driver
-z.rook.primary.datasource.jdbc-url=jdbc:postgresql://db-pg.isahl.com:5432/isahl.z-chess
-z.rook.primary.datasource.username=isahl.z-chess.pgsql
-z.rook.primary.datasource.password=2da790253022bd05cddda6d06bdc1e60
-z.rook.primary.sql.init.mode=always
-z.rook.primary.sql.init.schema-locations.0=classpath:primary/schema.sql
-#z.rook.primary.sql.init.data-locations.0=classpath:primary/data.sql
-# Local Sqlite Database
-z.rook.secondary.datasource.platform=sqlite
-z.rook.secondary.datasource.initialization-mode=always
-z.rook.secondary.datasource.driver-class-name=org.sqlite.JDBC
-z.rook.secondary.datasource.jdbc-url=jdbc:sqlite:${user.home}/Z-Chess/z-chess.db
-z.rook.secondary.datasource.username=
-z.rook.secondary.datasource.password=
-z.rook.secondary.jpa.database=DEFAULT
-z.rook.secondary.jpa.show-sql=false
-z.rook.secondary.jpa.generate-ddl=true
-z.rook.secondary.jpa.open-in-view=true
-z.rook.secondary.jpa.hibernate.ddl-auto=update
-z.rook.secondary.jpa.properties.hibernate.dialect=org.sqlite.hibernate.dialect.SQLiteDialect
-z.rook.secondary.jpa.properties.hibernate.hbm2ddl.auto=update
-z.rook.secondary.jpa.properties.hibernate.format_sql=true
-z.rook.secondary.sql.init.mode=always
-#z.rook.secondary.sql.init.schema-locations.0=classpath:secondary/schema.sql
-#z.rook.secondary.sql.init.data-locations.0=classpath:secondary/data.sql
+
+
