--- a/Z-Audience/pom.xml
+++ b/Z-Audience/pom.xml
@@ -29,7 +29,7 @@
     <parent>
         <artifactId>framework.z-chess</artifactId>
         <groupId>com.isahl.chess</groupId>
-        <version>1.0.15-SNAPSHOT</version>
+        <version>1.0.15</version>
     </parent>
     <artifactId>test.z-audience</artifactId>
     <name>Z-Audience</name>
