--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -20,12 +20,13 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-spring.datasource.platform=postgresql
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://db-pg.isahl.com:5432/isahl.z-chess
 spring.datasource.username=isahl.z-chess.pgsql
 spring.datesource.password=2da790253022bd05cddda6d06bdc1e60
 spring.sql.init.mode=always
+spring.sql.init.platform=postgresql
 #spring.sql.init.schema-locations.0=classpath:schema.sql
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=false
@@ -55,8 +56,8 @@ z.rook.dss[0].datasource.url=jdbc:postgresql://db-pg.isahl.com:5432/isahl.z-ches
 z.rook.dss[0].datasource.username=isahl.z-chess.pgsql
 z.rook.dss[0].datasource.password=2da790253022bd05cddda6d06bdc1e60
 z.rook.dss[0].sql-init.mode=always
-z.rook.dss[0].sql-init.schema-locations.0=classpath:0/schema.sql
-z.rook.dss[0].sql-init.data-locations.0=classpath:0/data.sql
+z.rook.dss[0].sql-init.schema-locations[0]=classpath:0/schema.sql
+z.rook.dss[0].sql-init.data-locations[0]=classpath:0/data.sql
 # dss[1]
 z.rook.dss[1].jpa.database-platform=org.sqlite.hibernate.dialect.SQLiteDialect
 z.rook.dss[1].jpa.database=DEFAULT
