--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -22,8 +22,8 @@
 #
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://db-pg.isahl.com:5432/isahl.z-chess
-spring.datasource.username=isahl.z-chess.pgsql
+spring.datasource.url=jdbc:postgresql://db-pg.isahl.com:5432/isahl-z-chess
+spring.datasource.username=z-chess
 spring.datesource.password=2da790253022bd05cddda6d06bdc1e60
 spring.sql.init.mode=always
 spring.sql.init.platform=postgresql
@@ -52,8 +52,8 @@ z.rook.dss[0].jpa.properties.hibernate.format_sql=true
 z.rook.dss[0].jpa.properties.hibernate.default_schema="z_chess_default"
 z.rook.dss[0].datasource.name=0
 z.rook.dss[0].datasource.driver-class-name=org.postgresql.Driver
-z.rook.dss[0].datasource.url=jdbc:postgresql://db-pg.isahl.com:5432/isahl.z-chess
-z.rook.dss[0].datasource.username=isahl.z-chess.pgsql
+z.rook.dss[0].datasource.url=jdbc:postgresql://db-pg.isahl.com:5432/isahl-z-chess
+z.rook.dss[0].datasource.username=z-chess
 z.rook.dss[0].datasource.password=2da790253022bd05cddda6d06bdc1e60
 z.rook.dss[0].sql-init.mode=always
 z.rook.dss[0].sql-init.schema-locations[0]=classpath:0/schema.sql
