--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -21,23 +21,23 @@
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://db-pg.isahl.com:5432/isahl-z-chess
-spring.datasource.username=z-chess
-spring.datesource.password=2da790253022bd05cddda6d06bdc1e60
-spring.sql.init.mode=always
-spring.sql.init.platform=postgresql
-#spring.sql.init.schema-locations.0=classpath:schema.sql
-spring.jpa.database=POSTGRESQL
-spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
-spring.jpa.open-in-view=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.default_schema="z_chess_default"
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://db-pg.isahl.com:5432/isahl-z-chess
+#spring.datasource.username=z-chess
+#spring.datesource.password=2da790253022bd05cddda6d06bdc1e60
+#spring.sql.init.mode=always
+#spring.sql.init.platform=postgresql
+##spring.sql.init.schema-locations.0=classpath:schema.sql
+#spring.jpa.database=POSTGRESQL
+#spring.jpa.show-sql=false
+#spring.jpa.generate-ddl=true
+#spring.jpa.open-in-view=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.properties.hibernate.hbm2ddl.auto=update
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.default_schema="z_chess_default"
 # dss[0]
 z.rook.dss[0].jpa.database=POSTGRESQL
 z.rook.dss[0].jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
