update spring-boot to 3.1.4

--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -22,7 +22,7 @@
 #
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://db-pg.isahl.com:5432/isahl-z-chess
+spring.datasource.url=jdbc:postgresql://localhost:5432/isahl.z-chess
 spring.datasource.username=z-chess
 spring.datesource.password=2da790253022bd05cddda6d06bdc1e60
 spring.sql.init.mode=always
@@ -52,7 +52,7 @@ z.rook.dss[0].jpa.properties.hibernate.format_sql=true
 z.rook.dss[0].jpa.properties.hibernate.default_schema="z_chess_default"
 z.rook.dss[0].datasource.name=0
 z.rook.dss[0].datasource.driver-class-name=org.postgresql.Driver
-z.rook.dss[0].datasource.url=jdbc:postgresql://db-pg.isahl.com:5432/isahl-z-chess
+z.rook.dss[0].datasource.url=jdbc:postgresql://localhost:5432/isahl.z-chess
 z.rook.dss[0].datasource.username=z-chess
 z.rook.dss[0].datasource.password=2da790253022bd05cddda6d06bdc1e60
 z.rook.dss[0].sql-init.mode=always
