--- a/Z-Rook/pom.xml
+++ b/Z-Rook/pom.xml
@@ -74,6 +74,7 @@
         <dependency>
             <groupId>org.ehcache</groupId>
             <artifactId>ehcache</artifactId>
+            <classifier>jakarta</classifier>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
