hibernate 6.x 已经支持sqlite-dialect

--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -59,7 +59,7 @@ z.rook.dss[0].sql-init.mode=always
 z.rook.dss[0].sql-init.schema-locations[0]=classpath:0/schema.sql
 z.rook.dss[0].sql-init.data-locations[0]=classpath:0/data.sql
 # dss[1]
-z.rook.dss[1].jpa.database-platform=org.sqlite.hibernate.dialect.SQLiteDialect
+z.rook.dss[1].jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 z.rook.dss[1].jpa.database=DEFAULT
 z.rook.dss[1].jpa.show-sql=false
 z.rook.dss[1].jpa.generate-ddl=true
