--- a/Z-Rook/pom.xml
+++ b/Z-Rook/pom.xml
@@ -49,8 +49,8 @@
             <artifactId>hibernate-types-60</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.gwenn</groupId>
-            <artifactId>sqlite-dialect</artifactId>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-community-dialects</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
