--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -32,7 +32,7 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.open-in-view=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
@@ -40,11 +40,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.default_schema="z_chess_default"
 # dss[0]
 z.rook.dss[0].jpa.database=POSTGRESQL
-z.rook.dss[0].jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+z.rook.dss[0].jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 z.rook.dss[0].jpa.show-sql=false
 z.rook.dss[0].jpa.generate-ddl=true
 z.rook.dss[0].jpa.open-in-view=true
-z.rook.dss[0].jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+z.rook.dss[0].jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 z.rook.dss[0].jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 z.rook.dss[0].jpa.properties.hibernate.hbm2ddl.auto=update
 z.rook.dss[0].jpa.properties.hibernate.enable_lazy_load_no_trans=true
@@ -64,7 +64,7 @@ z.rook.dss[1].jpa.database=DEFAULT
 z.rook.dss[1].jpa.show-sql=false
 z.rook.dss[1].jpa.generate-ddl=true
 z.rook.dss[1].jpa.open-in-view=true
-z.rook.dss[1].jpa.properties.hibernate.dialect=org.sqlite.hibernate.dialect.SQLiteDialect
+z.rook.dss[1].jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 z.rook.dss[1].jpa.properties.hibernate.hbm2ddl.auto=update
 z.rook.dss[1].jpa.properties.hibernate.format_sql=true
 z.rook.dss[1].datasource.name=1
