--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -64,7 +64,7 @@ z.rook.dss[1].jpa.database=DEFAULT
 z.rook.dss[1].jpa.show-sql=false
 z.rook.dss[1].jpa.generate-ddl=true
 z.rook.dss[1].jpa.open-in-view=true
-z.rook.dss[1].jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+z.rook.dss[1].jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDialect
 z.rook.dss[1].jpa.properties.hibernate.hbm2ddl.auto=update
 z.rook.dss[1].jpa.properties.hibernate.format_sql=true
 z.rook.dss[1].datasource.name=1
