--- a/Z-Arena/src/main/resources/application.properties
+++ b/Z-Arena/src/main/resources/application.properties
@@ -36,3 +36,5 @@ spring.jpa.show-sql=false
 z.chess.provider.io.consumer.trust_key_store_path=
 #z.chess.provider.io.consumer.key_password=storepass
 #z.chess.provider.io.consumer.trust_key_password=storepass
+
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=debug
