--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -41,7 +41,7 @@
 # dss[0]
 z.rook.dss[0].jpa.database=POSTGRESQL
 z.rook.dss[0].jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-z.rook.dss[0].jpa.show-sql=false
+z.rook.dss[0].jpa.show-sql=true
 z.rook.dss[0].jpa.generate-ddl=true
 z.rook.dss[0].jpa.open-in-view=true
 z.rook.dss[0].jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
