--- a/pom.xml
+++ b/pom.xml
@@ -58,14 +58,15 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>${java.encoding}</project.build.sourceEncoding>
         <!--LOG-->
-        <slf4j.version>2.0.9</slf4j.version>
-        <logback.version>1.4.11</logback.version>
+        <slf4j.version>2.0.12</slf4j.version>
+        <logback.version>1.5.3</logback.version>
+        <logback-access.version>1.4.14</logback-access.version>
         <!--SPRING-BOOT-->
-        <spring-boot.version>3.1.4</spring-boot.version>
+        <spring-boot.version>3.2.3</spring-boot.version>
         <!--Commons-IO-->
-        <commons-io.version>2.11.0</commons-io.version>
-        <commons-codec.version>1.15</commons-codec.version>
-        <commons-compress.version>1.21</commons-compress.version>
+        <commons-io.version>2.15.1</commons-io.version>
+        <commons-codec.version>1.16.1</commons-codec.version>
+        <commons-compress.version>1.26.1</commons-compress.version>
         <!--DB-->
         <hibernate-types-60.version>2.21.1</hibernate-types-60.version>
 
@@ -81,18 +82,18 @@
         <ehcache.version>3.10.8</ehcache.version>
         <jcache.version>1.1.1</jcache.version>
         <!--JSON-->
-        <jackson.version>2.15.3</jackson.version>
-        <json-schema-validator.version>1.0.87</json-schema-validator.version>
+        <jackson.version>2.17.0</jackson.version>
+        <json-schema-validator.version>1.3.3</json-schema-validator.version>
         <!--PLUGINS-->
-        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
-        <maven-clean-plugin.version>3.3.1</maven-clean-plugin.version>
+        <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
+        <maven-clean-plugin.version>3.3.2</maven-clean-plugin.version>
         <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
         <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
         <maven-install-plugin.version>3.1.1</maven-install-plugin.version>
         <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
-        <maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
-        <maven-javadoc-plugin.version>3.6.0</maven-javadoc-plugin.version>
-        <hibernate-enhance-maven-plugin.version>6.1.1.Final</hibernate-enhance-maven-plugin.version>
+        <maven-gpg-plugin.version>3.2.0</maven-gpg-plugin.version>
+        <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
+        <hibernate-enhance-maven-plugin.version>6.4.4.Final</hibernate-enhance-maven-plugin.version>
         <maven.compiler.debug>true</maven.compiler.debug>
     </properties>
     <profiles>
@@ -284,7 +285,7 @@
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-access</artifactId>
-                <version>${logback.version}</version>
+                <version>${logback-access.version}</version>
             </dependency>
             <!--IO-->
             <dependency>
