--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -53,7 +53,7 @@ z.rook.dss[0].jpa.properties.hibernate.default_schema="isahl"
 z.rook.dss[0].datasource.name=0
 z.rook.dss[0].datasource.driver-class-name=org.postgresql.Driver
 z.rook.dss[0].datasource.url=jdbc:postgresql://db-pg.isahl.com:5432/isahl
-z.rook.dss[0].datasource.username=isahl
+z.rook.dss[0].datasource.username=chess
 z.rook.dss[0].datasource.password=
 z.rook.dss[0].sql-init.mode=always
 z.rook.dss[0].sql-init.schema-locations[0]=classpath:0/schema.sql
