--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -24,7 +24,7 @@
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://localhost:5432/isahl.z-chess
 #spring.datasource.username=z-chess
-#spring.datesource.password=2da790253022bd05cddda6d06bdc1e60
+#spring.datasource.password=2da790253022bd05cddda6d06bdc1e60
 #spring.sql.init.mode=always
 #spring.sql.init.platform=postgresql
 ##spring.sql.init.schema-locations.0=classpath:schema.sql
