--- a/Z-Arena/src/main/resources/application.properties
+++ b/Z-Arena/src/main/resources/application.properties
@@ -36,3 +36,7 @@ spring.jpa.show-sql=false
 z.chess.provider.io.consumer.trust_key_store_path=
 #z.chess.provider.io.consumer.key_password=storepass
 #z.chess.provider.io.consumer.trust_key_password=storepass
+
+#postgresql.host=db-pg.isahl.com
+#postgresql.port=5432
+#postgresql.username=chess
