--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -27,7 +27,7 @@
 #spring.datasource.password=2da790253022bd05cddda6d06bdc1e60
 #spring.sql.init.mode=always
 #spring.sql.init.platform=postgresql
-##spring.sql.init.schema-locations.0=classpath:schema.sql
+#spring.sql.init.schema-locations.0=classpath:schema.sql
 #spring.jpa.database=POSTGRESQL
 #spring.jpa.show-sql=false
 #spring.jpa.generate-ddl=true
@@ -52,8 +52,8 @@ z.rook.dss[0].jpa.properties.hibernate.format_sql=true
 z.rook.dss[0].jpa.properties.hibernate.default_schema="isahl"
 z.rook.dss[0].datasource.name=0
 z.rook.dss[0].datasource.driver-class-name=org.postgresql.Driver
-z.rook.dss[0].datasource.url=jdbc:postgresql://db-pg.isahl.com:5432/isahl
-z.rook.dss[0].datasource.username=chess
+z.rook.dss[0].datasource.url=jdbc:postgresql://${postgresql.host}:${postgresql.port}/isahl
+z.rook.dss[0].datasource.username=${postgresql.username}
 z.rook.dss[0].datasource.password=
 z.rook.dss[0].sql-init.mode=always
 z.rook.dss[0].sql-init.schema-locations[0]=classpath:0/schema.sql
