默认值生效，可通过启动参数覆盖

--- a/Z-Arena/src/main/resources/application.properties
+++ b/Z-Arena/src/main/resources/application.properties
@@ -37,6 +37,6 @@ z.chess.provider.io.consumer.trust_key_store_path=
 #z.chess.provider.io.consumer.key_password=storepass
 #z.chess.provider.io.consumer.trust_key_password=storepass
 
-#postgresql.host=db-pg.isahl.com
-#postgresql.port=5432
-#postgresql.username=chess
+postgresql.host=db-pg.isahl.com
+postgresql.port=5432
+postgresql.username=chess
