--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -52,7 +52,7 @@ z.rook.dss[0].jpa.properties.hibernate.format_sql=true
 z.rook.dss[0].jpa.properties.hibernate.default_schema="isahl"
 z.rook.dss[0].datasource.name=0
 z.rook.dss[0].datasource.driver-class-name=org.postgresql.Driver
-z.rook.dss[0].datasource.url=jdbc:postgresql://${postgresql.host}:${postgresql.port}/isahl
+z.rook.dss[0].datasource.url=jdbc:postgresql://${postgresql.host}:${postgresql.port}/${postgresql.database}
 z.rook.dss[0].datasource.username=${postgresql.username}
 z.rook.dss[0].datasource.password=
 z.rook.dss[0].sql-init.mode=always
