1.cron表达式配置成可外部设置 2.增加开关允许关闭订舱

--- a/Z-Player/src/main/resources/player.properties
+++ b/Z-Player/src/main/resources/player.properties
@@ -4,3 +4,10 @@ noco.api.visit.token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOjEsInJvbG
 
 # bidding rpa config
 bidding.rpa.api.url=http://192.168.10.133:3000/reserve/query
+
+# bidding schedule express value
+bidding.task.cron=0 */5 * * * *
+
+# disable bidding rpa booking
+bidding.task.booking.disable=true
+
