增加schedule任务调度配置

--- a/Z-Player/src/main/resources/player.properties
+++ b/Z-Player/src/main/resources/player.properties
@@ -5,6 +5,9 @@ noco.api.visit.token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOjEsInJvbG
 # bidding rpa config
 bidding.rpa.api.url=http://192.168.10.116:3000/reserve/query
 
+# 是否启用bidding task schedule
+bidding.task.schedule=true
+
 # bidding schedule express value
 bidding.task.cron=0 */5 * * * *
 
