fix rpa business bug

--- a/Z-Player/src/main/resources/player.properties
+++ b/Z-Player/src/main/resources/player.properties
@@ -9,8 +9,8 @@ bidding.rpa.api.url=http://192.168.10.116:3000/reserve/query
 bidding.task.schedule=true
 
 # bidding schedule express value
-bidding.task.cron=0 */5 * * * *
+bidding.task.cron=0 */30 * * * *
 
 # disable bidding rpa booking
-bidding.task.booking.disable=true
+bidding.task.booking.disable=false
 
