优化拍舱逻辑，增加取消拍舱任务流程

--- a/Z-Player/src/main/resources/player.properties
+++ b/Z-Player/src/main/resources/player.properties
@@ -4,6 +4,7 @@ noco.api.visit.token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOjEsInJvbG
 
 # bidding rpa config
 bidding.rpa.api.url=http://localhost:3000/reserve/query
+bidding.cancel.api.url=http://localhost:3000/reserve/cancel
 
 # disable bidding rpa booking
 bidding.task.booking.disable=false
