完成良仓订单列表导入

--- a/Z-Player/src/main/resources/player.properties
+++ b/Z-Player/src/main/resources/player.properties
@@ -9,3 +9,5 @@ bidding.cancel.api.url=http://localhost:3000/reserve/cancel
 # disable bidding rpa booking
 bidding.task.booking.disable=false
 
+# LC WEB API URL
+lc_web_api_url=http://www.lc-oms.com/default/svc/web-service
