--- a/Z-King/pom.xml
+++ b/Z-King/pom.xml
@@ -70,6 +70,10 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+        </dependency>
         <!--Commons-Io-->
         <dependency>
             <groupId>commons-io</groupId>
